# AppliedAI-Learning

./: .env  main.py  pyproject.toml
Week-1/: API_test.ipynb  Day-1.ipynb  Day-2.ipynb  Day-5.ipynb  Website-Summarisation.ipynb  brouchure-generator.ipynb  debatesystem_gemini.ipynb  debatsystem.ipynb  debatsystem_ollama.ipynb  sample.ipynb  scraper.py  token.ipynb
Week-2/: Day-1.ipynb  Day-2-Gradio.ipynb
